--- a/css/styles.css
+++ b/css/styles.css
@@ -300,10 +300,15 @@ color:var(--accent-color);
 /* button */
 .hero .hero-button {
     
-    min-width: 200;
-    margin: 0 auto;
+   
     padding: 10px  34px;
-        border-radius: 4px;
+}        
+        
+
+.btn {
+     min-width: 200;
+    margin: 0 auto;
+    border-radius: 4px;
         font-family: inherit;
         font-weight: 700;
         font-size: 16px;
@@ -313,6 +318,7 @@ color:var(--accent-color);
 
         cursor: pointer; 
    
+
 }
 
 
@@ -919,6 +925,7 @@ color: var(--white-color);
 
 .modal {
     position: absolute ;
+   
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
@@ -956,9 +963,149 @@ color: var(--white-color);
     pointer-events: none;
 }
 
-.close-svg {
+
+
+/* ---------modal WINDOW---------- */
+
+
+
+.modal-info {
     
+    padding: 40px;
+}
+
+
+.modal-title {
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 1.15;
+        text-align: center;    
+        color: var(--section-title-color);
+        margin-bottom: 12px;
 }
 
 
 
+.modal-label{
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16;
+        margin-bottom: 4px;
+       
+    
+        letter-spacing: 0.01em;
+    
+        color: #757575;
+}
+
+.modal-wrap {
+    position: relative;
+}
+
+.input-icon {
+    position: absolute;
+    left: 9px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.modal-input {
+    
+    width: 100%;
+    height: 40px;
+
+        border: 1px solid rgba(33, 33, 33, 0.2);
+        border-radius: 4px;
+      
+        
+}
+
+.modal-input:hover,
+.modal-input:focus {
+    border-color: var(--accent-color);
+}
+
+.modal-input:hover + .input-icon,
+.modal-input:focus + .input-icon {
+    fill: var(--accent-color);
+}
+
+
+.modal-field {
+    margin-bottom: 10px;
+}
+
+.modal-comment {
+    width: 100%;
+    height: 120px;
+   
+    resize: none;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+        border-radius: 4px;
+}
+
+.modal-checkbox {
+    border: 0;
+}
+
+.modal-check-text {
+    font-size: 14px;
+        line-height: 1.71;
+    color: var(--primary-text-color);
+    
+        letter-spacing: 0.03em;
+        display: flex;
+ align-items: center;
+
+}
+
+.modal-check-text::before {
+    content: "" ;
+     width: 16px;
+     height: 15px;
+     border: 2px solid var(--section-title-color);
+     border-radius: 2px;
+
+    margin-right: 7px;
+}
+
+.modal-check:checked + .modal-check-text::before {
+    background-image: url(../images/icons&BG/Vector.svg);
+    background-color: var(--accent-color) ;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    border: none;
+}
+
+
+.modal-comment::placeholder {
+     font-size: 12px;
+            line-height: 1.16;
+            letter-spacing: 0.01em;
+        
+            color: rgba(117, 117, 117, 0.5);
+     
+            
+
+}
+
+
+
+
+
+.modal-button {
+   width: 200;
+        margin: 0 auto;
+        border-radius: 4px;
+        font-family: inherit;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 1.88;
+        border: 0;
+        background-color: #2196F3;
+    
+        cursor: pointer;
+        margin-top: 20px;
+}
