--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ html {
     --accent-color: #2196F3;
     --white-color: #ffffff;
     --fotter-link: rgba(255, 255, 255, 0.6);
+    --button-hover--:#188CE8;
 
 
 }
@@ -188,7 +189,7 @@ header .logo {
     transition-property: color ; 
     transition-duration: 250ms ; 
     transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
-    transition-delay: 0;
+
 
 
 }
@@ -324,9 +325,9 @@ color:var(--accent-color);
 
 .hero-button {
     transition-property: background-color;
-        transition-duration: 250ms;
+        transition-duration: 250ms;.
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-        transition-delay: 0;
+ 
 }
 
 
@@ -528,8 +529,8 @@ background: #F5F4FA;
  display: flex;
     transition-property: border;
         transition-duration: 250ms;
-        transition-timing-function: lincubic-bezier(0.4, 0, 0.2, 1)ear;
-        transition-delay: 0;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+       
     flex-basis: calc((100% - 150px) / 6);
 }
 
@@ -563,8 +564,8 @@ background: #F5F4FA;
 
     transition-property: color, border;
         transition-duration: 250ms;
-        transition-timing-function: lincubic-bezier(0.4, 0, 0.2, 1)ear;
-        transition-delay: 0;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+ 
     
            
     
@@ -599,8 +600,8 @@ background: #F5F4FA;
             background-color: rgba(255, 255, 255, 0.1);
             transition-property: background-color, color;
                 transition-duration: 250ms;
-                transition-timing-function: lincubic-bezier(0.4, 0, 0.2, 1)ear;
-                transition-delay: 0;
+                transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  
     
         }
  
@@ -743,19 +744,16 @@ font-size: 14px;
     padding: 6px 22px;
     border: 0;
     border-radius: 4px;
-
-
-
     font-weight: 500;
         font-size: 16px;
         line-height:1.62;
         color: var(--section-title-color);
         cursor: pointer;
         background: #F5F4FA;
-        transition-property: background-color, color;
+        transition-property: background-color, color, box-shadow;
             transition-duration: 250ms;
-            transition-timing-function: lincubic-bezier(0.4, 0, 0.2, 1)ear;
-            transition-delay: 0;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        
 }
 .filter-button:hover,
 .filter-button:focus {
@@ -809,12 +807,12 @@ font-size: 14px;
  .exampl-link {
      display: flex;
      flex-direction: column;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
 
- .one-exampl:hover,
- .one-exampl:focus {
+ .exampl-link:hover,
+ .exampl-link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
  }
 
@@ -848,6 +846,7 @@ font-size: 14px;
     color: var(--accent-color);
     padding-bottom: 0;
     padding-top: 0;
+    margin-bottom: -1px;
 }
 .filter .current {
 background-color: var(--accent-color);
@@ -872,8 +871,8 @@ color: var(--white-color);
     color: var(--icon-silver--);
     transition-property: background-color, color;
         transition-duration: 250ms;
-        transition-timing-function: lincubic-bezier(0.4, 0, 0.2, 1)ear;
-        transition-delay: 0;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    
     
 
 }
@@ -929,8 +928,8 @@ color: var(--white-color);
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
-    width: 525px;
-    height: 581px;
+ 
+    
      background-color: var(--white-color);
     border-radius: 4px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1007,19 +1006,26 @@ color: var(--white-color);
     left: 9px;
     top: 50%;
     transform: translateY(-50%);
+    transition-property: fill;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input {
-    
+    padding-left: 42px;
     width: 100%;
     height: 40px;
 
         border: 1px solid rgba(33, 33, 33, 0.2);
         border-radius: 4px;
+        transition-property: border-color, fill;
+            transition-duration: 250ms;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
       
         
 }
-
+.modal-comment:hover,
+.modal-comment:focus,
 .modal-input:hover,
 .modal-input:focus {
     border-color: var(--accent-color);
@@ -1038,15 +1044,21 @@ color: var(--white-color);
 .modal-comment {
     width: 100%;
     height: 120px;
-   
+   padding: 12px 16px;
     resize: none;
-
+margin-bottom: 20px;
     border: 1px solid rgba(33, 33, 33, 0.2);
         border-radius: 4px;
+        transition-property: border-color;
+            transition-duration: 250ms;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-checkbox {
+.modal-check {
     border: 0;
+    margin-bottom: 30px;
+    display: flex;
+
 }
 
 .modal-check-text {
@@ -1057,7 +1069,7 @@ color: var(--white-color);
         letter-spacing: 0.03em;
         display: flex;
  align-items: center;
-
+    justify-content: center;
 }
 
 .modal-check-text::before {
@@ -1079,6 +1091,11 @@ color: var(--white-color);
     border: none;
 }
 
+.privacy-link {
+    color: var(--accent-color);
+    margin-left: 4px;
+}
+
 
 .modal-comment::placeholder {
      font-size: 12px;
@@ -1096,7 +1113,7 @@ color: var(--white-color);
 
 
 .modal-button {
-   width: 200;
+   padding: 10px 55px;
         margin: 0 auto;
         border-radius: 4px;
         font-family: inherit;
@@ -1105,7 +1122,25 @@ color: var(--white-color);
         line-height: 1.88;
         border: 0;
         background-color: #2196F3;
+        color: var(--white-color);
+      transition-property: background-color box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+        margin-top: 30px;
+     
+        display: flex;
+}
+
+.modal-button:hover,
+.modal-button:focus {
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+background-color:var(--button-hover--) ;
+}
+
+
+.hero .hero-button:hover,
+.hero .hero-button:focus {
+    background:var(--button-hover--);
     
-        cursor: pointer;
-        margin-top: 20px;
 }
