--- a/css/styles.css
+++ b/css/styles.css
@@ -308,6 +308,7 @@ color:var(--accent-color);
 
 .btn {
      min-width: 200;
+     min-height: 50px;
     margin: 0 auto;
     border-radius: 4px;
         font-family: inherit;
@@ -683,20 +684,81 @@ font-size: 14px;
 }
 
 
- .footer-item:not(:last-child) {
+.address-container {
+    margin-right: 70px;
+}
+
+.join-container {
+    margin-right: 93px;
+}
+
+
+.sub {
+    display: flex;
+    flex-direction: column;
+    margin-right: 12px;
+}
+
+.sub-label {
+    font-weight: 700;
+        font-size: 14px;
+        line-height: 1.21;
+        text-transform: uppercase; 
+        color:var(--white-color);
+}
+
+.submit-container {
+    display: flex;
+    align-items: center;
+    align-content: center;
+}
+
+.footer-user-name {
+    padding: 15px 16px;
+    background: #2F303A;
+    width: 358px;
+    height: 50px;
+    margin-top: 20px;
+    border-radius: 4px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+
+}
+
+.footer-submit-button {
+    
+   padding-left: 29px;
+   padding-right: 28px;
+
+font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.06em;
+
+    color:var(--white-color);
+    transition-property: box-shadow, background-color;
+    transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-submit-button:hover,
+.footer-submit-button:focus {
+    background-color: var(--button-hover--);
+    box-shadow: ;
+}
+
+.submit-icon {
+    margin-left: 10px;
+}
+
+
+
+
+ /* .footer-item:not(:last-child) {
      margin-right: 70px;
 
- }
-
-
-
-
-/* ------постійні клієнти------- */
-
-
-
-
-
+ } */
 
 
 
@@ -1123,7 +1185,7 @@ margin-bottom: 20px;
         border: 0;
         background-color: #2196F3;
         color: var(--white-color);
-      transition-property: background-color box-shadow;
+      transition-property: background-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
