--- a/css/styles.css
+++ b/css/styles.css
@@ -319,8 +319,8 @@ color:var(--accent-color);
     align-items: center;
     justify-content: center;
      min-width: 200px;
-     padding-top: 10px;
-     padding-bottom: 10px;
+     height: 50px;
+
 
 color: var(--white-color);
       background-color: var(--accent-color); 
@@ -332,10 +332,7 @@ color: var(--white-color);
         font-size: 16px;
         line-height: 1.88;
         letter-spacing: 0.06em;
-      
-        
-
-        cursor: pointer; 
+         cursor: pointer; 
         transition-property: background-color;
             transition-duration: 250ms;
             transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -929,19 +926,16 @@ color: var(--white-color);
 }
 
 .modal {
+    width: 528px;
+    height: 581px;
     position: absolute ;
         padding: 40px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
- 
-    
-     background-color: var(--white-color);
+    background-color: var(--white-color);
     border-radius: 4px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    box-shadow: 0px 2px 1px 0px #00000033;
-    
-        box-shadow: 0px 1px 1px 0px #00000024;
     
         box-shadow: 0px 1px 3px 0px #0000001F;
 }
@@ -961,6 +955,16 @@ color: var(--white-color);
         cursor: pointer;
 
 }
+
+.close-svg {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-svg:hover,
+.close-svg:focus {
+    fill: var(--accent-color);
+}
+
 
 .is-hidden {
     visibility: hidden;
@@ -1041,6 +1045,7 @@ color: var(--white-color);
 }
 
 .comment-field {
+
     margin-bottom: 20px;
 }
 
