--- a/css/styles.css
+++ b/css/styles.css
@@ -927,7 +927,7 @@ color: var(--white-color);
 
 .modal {
     width: 528px;
-    height: 581px;
+
     position: absolute ;
         padding: 40px;
     top: 50%;
@@ -1053,6 +1053,7 @@ color: var(--white-color);
 
 
 .modal-comment {
+    display: block;
     width: 100%;
     height: 120px;
    padding: 12px 16px;
@@ -1096,6 +1097,15 @@ color: var(--white-color);
      border-radius: 2px;
 
     margin-right: 7px;
+    transition-property: border;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.modal-check:hover + .modal-check-text::before,
+.modal-check:focus + .modal-check-text::before {
+    border: 2px solid var(--accent-color);
 }
 
 .modal-check:checked + .modal-check-text::before {
@@ -1104,7 +1114,7 @@ color: var(--white-color);
     background-repeat: no-repeat;
     background-position: center;
 
-    border: var(--accent-color);
+    border:2px solid var(--accent-color);
 }
 
 .privacy-link {
